# Tusk

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DELIVERABLES.md  DEPLOYMENT_GUIDE.md  FILE_TREE.txt  IAM_POLICY_SENTINEL_RESEARCH.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PHASE1_COMPLETE.md  PHASE2_SUMMARY.md  README.md  README_IMPLEMENTATION.md  SUMMARY.md  advanced_examples.py  agent_config.py  alembic.ini  cartographer.md  claude.md  defaults.toml  demo.py  demo_phase2.py  feature.md  git_commit.md  klarna_task.txt  persistent_agent.py  prod_imp.md  progress.md  prompt.txt  pyproject.toml  quickstart.py  requirements.txt  skills.md  verify_bug_fix.py  verify_phase1.py  verify_phase2.py
.github/: renovate.json5
.github/workflows/: ci.yml  iamtrail-shape-monitor.yml  live-tests.yml  sentinel-monitor.yml
data/: iam_actions.db  known_services.json  resource_inventory.db
docs/: FEATURES.md  USAGE.md
docs/plans/: 2026-02-24-dynamic-service-prefixes-design.md  2026-02-24-dynamic-service-prefixes.md
migrations/iam/: env.py
migrations/iam/versions/: 0001_initial_schema.py  0002_add_verb_prefixes.py  0003_add_dangerous_actions.py  0004_add_companion_rules.py  0005_add_dangerous_combinations.py  0006_add_action_resource_map.py  0007_add_arn_templates.py  0008_add_managed_policies.py
migrations/inventory/: env.py
migrations/inventory/versions/: 0001_initial_inventory.py
scripts/: check_dev_deps_match.py  check_precommit_uv_drift.py  sentinel-cron.sh
src/fetchers/: __init__.py  _http_helpers.py  aws_managed.py  aws_sample.py  base.py  batch.py  clipboard.py  cloudsplaining.py  github.py  local.py  url.py
src/refresh/: __init__.py  aws_docs_scraper.py  aws_examples.py  aws_managed_policies.py  cloudsplaining.py  policy_sentry_loader.py
src/sentinel/: __init__.py  __main__.py  analyzer.py  cli.py  cli_cache.py  cli_config.py  cli_fetch.py  cli_managed.py  cli_misc.py  cli_utils.py  config.py  constants.py  database.py  exit_codes.py  formatters.py  hmac_keys.py  intent_spec.py  inventory.py  logging_setup.py  migrations.py  models.py  parser.py  rewriter.py  secrets_patterns.py  seed_data.py  self_check.py  telemetry.py
src/sentinel/fetchers/: _http_helpers.py  base.py  clipboard.py  cloudsplaining.py  github.py  local.py
src/sentinel/net/: __init__.py  allow_list.py  cache.py  client.py  guards.py  retry.py  urls.py
src/sentinel/refresh/: __init__.py  aws_docs_scraper.py  aws_examples.py  aws_managed_policies.py  cloudsplaining.py  policy_sentry_loader.py
tests/: __init__.py  conftest.py  test_alembic_drift.py  test_alembic_roundtrip.py  test_alembic_silence.py  test_analyzer.py  test_aws_examples.py  test_cache.py  test_cli.py  test_cli_config_redaction.py  test_cli_empty_corpus_banner.py  test_cli_fetch.py  test_cli_live.py  test_cli_subcommands_coverage.py  test_config.py  test_data_files.py  test_database.py  test_dynamic_services.py  test_fixture_wiring.py  test_formatter_fail_suppression.py  test_hmac_keys_coverage.py  test_import_hygiene.py  test_intent_spec.py  test_inventory.py  test_logging_setup_coverage.py  test_managed_policies_live.py  test_migrations_coverage.py  test_net_client.py  test_net_guards.py  test_net_urls.py  test_parser.py  test_parser_fuzz.py  test_performance.py  test_phase7_regressions.py  test_refresh.py  test_retry.py  test_rewriter.py  test_rewriter_unique_sids.py  test_secrets_patterns.py  test_seed_data.py  (+3 more)
tests/fixtures/snapshots/: README.md  missing_companions.snapshot  wildcard_overuse.snapshot
tests/fixtures/test_policies/: cross_service_complex.json  hallucinated_actions.json  intent_mismatch.json  missing_companions.json  privilege_escalation.json  simple_policy.yaml  structural_issues.json  wildcard_overuse.json
tests/integration/: test_dynamic_services_integration.py  test_graceful_degradation.py  test_pipeline.py  test_real_world_scenarios.py
tests/test_fetchers/: __init__.py  test_aws_managed.py  test_aws_sample.py  test_batch.py  test_clipboard.py  test_cloudsplaining.py  test_github.py  test_local.py  test_url.py
